project/main/default/objects/Wishlist_Item__c/Wishlist_Item__c.object-meta.xml
<CustomObject>
    <label>Wishlist Item</label>
    <nameField>
        <displayFormat>WLI-{0000}</displayFormat>
        <label>Wishlist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wishlist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>