project/main/default/objects/Wishlist_Item__c/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <label>Added Date</label>
    <type>DateTime</type>
</CustomField>