project/main/default/objects/Wishlist_Item__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Wishlist Items</relationshipLabel>
    <relationshipName>Wishlist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>