project/main/default/objects/Wishlist_Item__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>