project/main/default/objects/Wishlist_Item__c/fields/Wishlist__c.field-meta.xml
<CustomField>
    <fullName>Wishlist__c</fullName>
    <label>Wishlist</label>
    <referenceTo>Wishlist__c</referenceTo>
    <relationshipLabel>Wishlist Items</relationshipLabel>
    <relationshipName>Wishlist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>